--- a/team/Ian.html
+++ b/team/Ian.html
@@ -34,17 +34,12 @@
 		font-family: Abel;
 		font-size: 28px;
 		line-height: 1em;
-		margin: 0.5em 0 0 0;
+		margin: 0.5em 0 0.5em 0;
 		letter-spacing: -0.02em;
 		color: #4DAAD2;
 	}
 	
-	.tab{
-		padding: 6px 0 0 0; margin: 0;
-		border: 2px solid #90E0E0;
-		display: flex;
-		flex-flow: row wrap;
-	}
+	.tab{ padding: 6px 0 0 0; margin: 0; border: 2px solid #90E0E0; border-bottom: 0px; display: flex; flex-flow: row wrap; }
 	.tab li{
 		line-height: 1em;
 		margin: 0 0 -2px 0;
@@ -69,14 +64,20 @@
 		overflow-y: auto;
 		padding: 0.75em;
 		display: none;
+		font-family: "Noto Sans", sans;
+		font-size: 18px;
+	}
+	.tab-content ul{margin: 0 0 0 0;}
+	.tab-content li{
+		font-family: "Noto Sans", sans;
+		font-size: 18px;
 	}
 	
 	.tab-content.selected{
 		display: block;
 	}
 	
-	
-	@media only screen and (orientation: landscape) {
+	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
 	@media only screen and (orientation: portrait) {
@@ -133,11 +134,11 @@
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
 		</ul>
 		
-		<p id="overview" class="tab-content selected">
+		<div id="overview" class="tab-content selected">
 			Ian Chu was born in Keelung City, Taiwan. He received his B.S. degree in Civil Engineering from Nanya Institute of Technology in 1984. He also founded two companies which participated in multiple public constructive projects: Taipei Metro, Formosa Plastics Corp's (FPC) Sixth Naphtha Cracker Complex, etc.
-			<br/><br/>
+			<p></p>
 			Mr. Chu first joined the Newport Beach Research Laboratory Inc. in 2013 where he served as its Secretary of Board of Directors. Recognized for his acumen in business development and execution, he was quickly promoted to Operating Senior Vice President in 2014. In 2014, he helped establish the first Brain Treatment Center clinic in Kang-Ming.In 2015, a second clinic in Kang-He was established and is now considered central to the Asia region.
-		</p>
+		</div>
 	</div>
 </div>
 
