--- a/team/JJ.html
+++ b/team/JJ.html
@@ -34,17 +34,12 @@
 		font-family: Abel;
 		font-size: 28px;
 		line-height: 1em;
-		margin: 0.5em 0 0 0;
+		margin: 0.5em 0 0.5em 0;
 		letter-spacing: -0.02em;
 		color: #4DAAD2;
 	}
 	
-	.tab{
-		padding: 6px 0 0 0; margin: 0;
-		border: 2px solid #90E0E0;
-		display: flex;
-		flex-flow: row wrap;
-	}
+	.tab{ padding: 6px 0 0 0; margin: 0; border: 2px solid #90E0E0; border-bottom: 0px; display: flex; flex-flow: row wrap; }
 	.tab li{
 		line-height: 1em;
 		margin: 0 0 -2px 0;
@@ -69,6 +64,13 @@
 		overflow-y: auto;
 		padding: 0.75em;
 		display: none;
+		font-family: "Noto Sans", sans;
+		font-size: 18px;
+	}
+	.tab-content ul{margin: 0 0 0 0;}
+	.tab-content li{
+		font-family: "Noto Sans", sans;
+		font-size: 18px;
 	}
 	
 	.tab-content.selected{
@@ -76,7 +78,7 @@
 	}
 	
 	
-	@media only screen and (orientation: landscape) {
+	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
 	@media only screen and (orientation: portrait) {
@@ -133,11 +135,11 @@
 			<li onclick="selectTab('tabBar', 'overview');" class="selected" id="overview_tab">Overview</li>
 		</ul>
 		
-		<p id="overview" class="tab-content selected">
+		<div id="overview" class="tab-content selected">
 			Jyh-Chung Han graduated from the National Taipei University of Technology with a BA in Civil Engineering. Since then, he has gained extensive business experience in real estate, construction, company management, and company operations within the Koo Organization. In the past 30 years, he has successfully established and operated many oversea corporations for the Koo family including, but not limited to, managing resorts, hotels, medical facilities, and transportation. His counsel has been widely sought in these various fields. 
-			<br/><br/>
+			<p></p>
 			Mr. Han co-founded Newport Brain Research Laboratory (NBRL), Brain Treatment Center (BTC), and helped create the MRT and MeRT technologies currently used by WaveNeuroscience, Inc. 
-		</p>
+		</div>
 	</div>
 </div>
 
