--- a/team/Jin.html
+++ b/team/Jin.html
@@ -34,17 +34,12 @@
 		font-family: Abel;
 		font-size: 28px;
 		line-height: 1em;
-		margin: 0.5em 0 0 0;
+		margin: 0.5em 0 0.5em 0;
 		letter-spacing: -0.02em;
 		color: #4DAAD2;
 	}
 	
-	.tab{
-		padding: 6px 0 0 0; margin: 0;
-		border: 2px solid #90E0E0;
-		display: flex;
-		flex-flow: row wrap;
-	}
+	.tab{ padding: 6px 0 0 0; margin: 0; border: 2px solid #90E0E0; border-bottom: 0px; display: flex; flex-flow: row wrap; }
 	.tab li{
 		line-height: 1em;
 		margin: 0 0 -2px 0;
@@ -70,12 +65,12 @@
 		padding: 0.75em;
 		display: none;
 		font-family: "Noto Sans", sans;
-		font-size: 22px;
+		font-size: 18px;
 	}
-	.tab-content ul, .tab-content ol{margin: 0.5em 0 0 0;}
+	.tab-content ul{margin: 0 0 0 0;}
 	.tab-content li{
 		font-family: "Noto Sans", sans;
-		font-size: 24px;
+		font-size: 18px;
 	}
 	
 	.tab-content.selected{
@@ -83,7 +78,7 @@
 	}
 	
 	
-	@media only screen and (orientation: landscape) {
+	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
 	@media only screen and (orientation: portrait) {
@@ -142,11 +137,11 @@
 			<li onclick="selectTab('tabBar', 'awards');" id="awards_tab">Awards</li>
 		</ul>
 		
-		<p id="overview" class="tab-content selected">
+		<div id="overview" class="tab-content selected">
 			Dr. Yi Jin graduated medical school at Shanghai First Medical College, completed his postdoctoral fellowships at the University of California, Los Angeles School of Medicine’s Neuropsychiatric Institute and University of California, Irvine Medical Center’s Department of Psychiatry and Human Behavior, and practiced as a clinical psychiatrist until 1986. In the past 25 years, he has taught and researched at the University of California, Irvine, and University of California, San Diego. His main academic interests are the neuro-physical process in normal and abnormal cognition. Using various types of sensory stimulations and neural imaging recording, he has found that the brain’s cognitive process is discrete and its accuracy depends on the internal rhythmic oscillation. The rhythmicity itself, however, is “tunable” via proper external stimulation. This discovery opens up a new avenue for treatment of mental disorders. During the past 13 years, he has studied the novel physical treatment, repetitive transcranial magnetic stimulation (TMS). Using individual’s intrinsic brain wave frequency, he successfully treated many patients with various types of neuropsychiatric disorder, including schizophrenia, major depression, anxiety, substance abuse, and autism. Several results have been published in peer reviewed journals and presented at academic conferences. 
-			<br/><br/>
+			<p></p>
 			In addition to the academic works at the University, he has cofounded two companies, NeoSync, Inc and Brain Treatment Center (BTC) since 2007. Neosync is a privately funded corporation manufacturing portable TMS instruments, and BTC, a psychiatric clinic using EEG and TMS to assist clinical diagnosis and treatment for autistic spectral disorder (ASD) and other mental disorders.
-		</p>
+		</div>
 		
 		<div id="background" class="tab-content">
 			Education
