--- a/team/template.html
+++ b/team/template.html
@@ -34,17 +34,12 @@
 		font-family: Abel;
 		font-size: 28px;
 		line-height: 1em;
-		margin: 0.5em 0 0 0;
+		margin: 0.5em 0 0.5em 0;
 		letter-spacing: -0.02em;
 		color: #4DAAD2;
 	}
 	
-	.tab{
-		padding: 6px 0 0 0; margin: 0;
-		border: 2px solid #90E0E0;
-		display: flex;
-		flex-flow: row wrap;
-	}
+	.tab{ padding: 6px 0 0 0; margin: 0; border: 2px solid #90E0E0; border-bottom: 0px; display: flex; flex-flow: row wrap; }
 	.tab li{
 		line-height: 1em;
 		margin: 0 0 -2px 0;
@@ -69,14 +64,20 @@
 		overflow-y: auto;
 		padding: 0.75em;
 		display: none;
+		font-family: "Noto Sans", sans;
+		font-size: 18px;
+	}
+	.tab-content ul{margin: 0 0 0 0;}
+	.tab-content li{
+		font-family: "Noto Sans", sans;
+		font-size: 18px;
 	}
 	
 	.tab-content.selected{
 		display: block;
 	}
 	
-	
-	@media only screen and (orientation: landscape) {
+	@media only screen and (orientation: landscape) { .tab-content {overflow-y: scroll; height: 20em;}
 	
 	}
 	@media only screen and (orientation: portrait) {
