--- a/our_technology.html
+++ b/our_technology.html
@@ -100,6 +100,21 @@
 		#more-graphics{
 			width: 80%;
 		}
+		.sec-header span p{
+			transform: translate(-1.7em, 0);
+		}
+		.sec-header span h2{
+			transform: translate(-1.55em, 0.3em);
+		}
+	}
+	
+	@media only screen and (orientation: landscape) {
+		.sec-header span p{
+			transform: translate(-1.7em, 1.25em);
+		}
+		.sec-header span h2{
+			transform: translate(-1.55em, 1.5em);
+		}
 	}
 	
 	</style>
@@ -143,8 +158,8 @@
   <div class="card">
 	<div class="sec-header" style="position: relative; display: inline-block;">
 		<span>
-			<p style="position: absolute; width: 7em; height: 0.5em; transform: translate(-1.7em, 1.25em); border-top: 1px solid #4DAAD2; border-left: 1px solid #4DAAD2;" ></p>
-			<h2 style="color: #4DAAD2; position: absolute; font-size: 20px; transform: translate(-1.55em, 1.5em);"> 01</h2>
+			<p style="position: absolute; width: 7em; height: 0.5em; border-top: 1px solid #4DAAD2; border-left: 1px solid #4DAAD2;" ></p>
+			<h2 style="color: #4DAAD2; position: absolute; font-size: 20px; "> 01</h2>
 		</span>
 		<h2> Electromagnetic Brain Pulse (EMBP)  </h2>
 	</div>
@@ -163,8 +178,8 @@
   <div class="card" style="background: url('res/tech_stem_background.png')">
 	<div class="sec-header" style="position: relative; display: inline-block;">
 		<span>
-			<p style="position: absolute; width: 7em; height: 0.5em; transform: translate(-1.7em, 1.25em); border-top: 1px solid #ECD9C8; border-left: 1px solid #ECD9C8;" ></p>
-			<h2 style="color: #ECD9C8; position: absolute; font-size: 20px; transform: translate(-1.55em, 1.5em);"> 02</h2>
+			<p style="position: absolute; width: 7em; height: 0.5em;  border-top: 1px solid #ECD9C8; border-left: 1px solid #ECD9C8;" ></p>
+			<h2 style="color: #ECD9C8; position: absolute; font-size: 20px;"> 02</h2>
 		</span>
 		<h2 style="color: white;"> Magnetic Stimulation for Viral Infection  </h2>
 	</div>
@@ -194,8 +209,8 @@
   <div class="card">
 	<div class="sec-header" style="position: relative; display: inline-block;">
 		<span>
-			<p style="position: absolute; width: 7em; height: 0.5em; transform: translate(-1.7em, 1.25em); border-top: 1px solid #4DAAD2; border-left: 1px solid #4DAAD2;" ></p>
-			<h2 style="color: #4DAAD2; position: absolute; font-size: 20px; transform: translate(-1.55em, 1.5em);"> 03</h2>
+			<p style="position: absolute; width: 7em; height: 0.5em; border-top: 1px solid #4DAAD2; border-left: 1px solid #4DAAD2;" ></p>
+			<h2 style="color: #4DAAD2; position: absolute; font-size: 20px;"> 03</h2>
 		</span>
 		<h2> Magnetic Stimulation and STEM Cell Technology  </h2>
 	</div>
